# Neural-Circuits

./: .gitignore  README.md  pyproject.toml
experiments/binary_mnist/: exp.py
neural_circuits/: __init__.py  layers.py  logic_gates.py  model.py
tests/: test_lightning.py  test_logic_gates.py
