[tool.poetry]
name = "neural-circuits"
version = "0.1.0"
description = "neural circuit project beginning with XNOR/NAND-based Binary Attention Network"
authors = ["Choi Soon Ho <sosaror@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "neural_circuits"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pytorch-lightning = "^2.5.0.post0"
pytest = "^8.3.4"
matplotlib = "^3.10.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
